# composable-agent-stack

./: worklog.md
agent-stack/: .coverage  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agent-stack/.github/workflows/: ci.yml
agent-stack/config/: init.sql  litellm_config.yaml
agent-stack/orchestrator/: __init__.py  config.py  metrics.py
agent-stack/orchestrator/adapters/: __init__.py  agents.py  base.py  browser.py  circuit_breaker.py  openhands.py
agent-stack/orchestrator/api/: __init__.py  app.py  orchestrator.py
agent-stack/orchestrator/compression/: __init__.py  autocompact.py  compact.py  manager.py  session.py
agent-stack/orchestrator/routing/: __init__.py  redis_queue.py
agent-stack/orchestrator/state/: __init__.py  models.py  persistence.py
agent-stack/tests/: conftest.py  test_api_endpoints.py  test_circuit_breaker.py  test_compression_manager.py  test_integration.py  test_metrics.py  test_state_machine.py
agent-stack/tests/chaos/: test_chaos_engineering.py
agent-stack/tests/contract/: test_adapter_contracts.py
agent-stack/tests/harness/: __init__.py  factories.py  mocks.py  runner.py
agent-stack/tests/performance/: test_performance.py
agent-stack/tests/property/: test_state_machine_property.py
agent-stack/tests/rl/: optimizer.py  test_rl_optimizer.py
agent-stack/tests/security/: test_input_validation.py
download/: generate_verification_pdf.py  litellm_agent_stack_compressed_reference.md
upload/: EXECUTION_READY_KNOWLEDGE_BASE.md  agent-s-architecture-deep-dive.md  (+2 more)
(+10 files in other folders)
